# VisualBundle

./: .gitignore  CMakeLists.txt  CODEOWNERS  GUI1.py  README.md  denoising.py  main.py  readme_renoising.md  requirements.txt
.github/workflows/: pylint.yml
dependencies/: requirements.txt
documentation/: doc.puml
interface/ObjRem/: inpainter.h
scripts/: build.bat  build.sh  init.cmd  init.sh  run.py
src/Binder/: bindings.cpp
src/Denoising/: __init__.py  denoising.py
src/Filtering/: __init__.py  apply.py  cinematic_lut.py  cool_lut.py  sepia_lut.py  warm_lut.py
src/Llie/: Llie.py  __init__.py  clahe.py  clahe_ssr.py  ssr.py  umask.py
src/ObjRem/: inpainter.cpp
src/Other/: __init__.py  bkgr.py  flip.py
tests/unit/: CMakeLists.txt  test_core.cpp
